--- a/Assignment_04/style.css
+++ b/Assignment_04/style.css
@@ -36,6 +36,7 @@ body {
     gap: 10px;
     /* border: 1px solid gray; */
     /* margin: 0 auto; */
+    transition: background 0.5s ease-in-out;
 }
 .glass {
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
@@ -47,6 +48,7 @@ body {
 }
 .container img {
     border-radius: 50%;
+    transition: opacity 0.5s ease;
 }
 /* .container input {
     padding: 2px;
